bhushan::data format changes

--- a/gold-admin-frontend/src/app/views/pages/admin/user-management/assign-appraiser/assign-appraiser/assign-appraiser.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/user-management/assign-appraiser/assign-appraiser/assign-appraiser.component.html
@@ -77,7 +77,7 @@
                                 <input type="text" class="form-control" [matDatepicker]="picker" (click)="picker.open()"
                                     formControlName="appoinmentDate"
                                     [class.isError]="controls.appoinmentDate.touched && controls.appoinmentDate.invalid"
-                                    readonly placeholder="4/5/2020" [min]="currentDate"
+                                    readonly placeholder="DD/MM/YYYY" [min]="currentDate"
                                     (dateChange)="setMinimumStartTime($event)">
                                 <mat-datepicker #picker></mat-datepicker>
                             </div>
