--- a/gold-admin-frontend/src/app/views/pages/admin/scrap-management/scrap-application-form/scrap-application-form.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/scrap-management/scrap-application-form/scrap-application-form.component.html
@@ -46,18 +46,16 @@
                             [scrapIds]="scrapIds" [scrapStage]="scrapStage" (ornamentType)="ornaments($event)">
                         </kt-approval>
                     </mat-tab>
-                    <!-- <mat-tab label="Packets" *ngIf="url == 'packet-image-upload' || url == 'view-scrap'">
+                    <mat-tab label="Packets"
+                        *ngIf="scrapStage?.id !=6 && scrapStage?.id !=1 && scrapStage?.id && scrapStage?.id != 9">
                         <div class="mat-tab-body-content ng-trigger ng-trigger-translateTab"
                             style="padding:0px !important">
-                            <kt-upload-packets [viewpacketsDetails]="customerDetail" [ornamentType]="customerDetail"
-                                [masterAndLoanIds]="masterAndLoanIds" (next)="next($event)">
+                            <kt-upload-packets [viewpacketsDetails]="customerDetail" [ornamentType]="ornamentDetails"
+                                [scrapIds]="scrapIds" (next)="next($event)" [scrapStage]="scrapStage"
+                                [showButton]="showButton">
                             </kt-upload-packets>
                         </div>
                     </mat-tab>
-                    <mat-tab label="Upload Documents" *ngIf="url == 'packet-image-upload' || url == 'view-scrap'">
-                        <kt-upload-documents [masterAndLoanIds]="masterAndLoanIds"
-                            [loanDocumnets]="customerDetail"></kt-upload-documents>
-                    </mat-tab> -->
                 </mat-tab-group>
             </div>
         </div>
