--- a/gold-admin-frontend/src/app/views/pages/admin/funds-approvals/upload-document/upload-document.component.scss
+++ b/gold-admin-frontend/src/app/views/pages/admin/funds-approvals/upload-document/upload-document.component.scss
@@ -1,3 +1,22 @@
 kt-portlet-body {
     min-height: 88vh;
+
+    .iframeWrapper{
+		display:inline-block;
+		position:relative;
+	}
+	  
+	.iframeWrapper iframe{
+		vertical-align:top;
+		pointer-events: none;
+		margin-top: -65px;
+		margin-left: -7px;
+	}
+
+	.edit-icon {
+		position: absolute;
+		right: 4px;
+		top: 1px;
+		z-index: 10;
+	}
 }
