bhushan::packets barcode

--- a/gold-admin-frontend/src/app/views/pages/admin/user-management/assign-appraiser/assign-appraiser/assign-appraiser.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/user-management/assign-appraiser/assign-appraiser/assign-appraiser.component.html
@@ -70,7 +70,7 @@
                         </div>
                         <div class="row kt-padding-t-15">
                             <div class="col-4 form-label">
-                                <label class="mandatory kt-padding-l-10">Appointment</label>
+                                <label class="mandatory kt-padding-l-10">Appointment Date</label>
                             </div>
 
                             <div class="col-8">
@@ -84,7 +84,7 @@
                         </div>
                         <div class="row kt-padding-t-15">
                             <div class="col-4 form-label">
-                                <label class="mandatory kt-padding-l-10">Time</label>
+                                <label class="mandatory kt-padding-l-10">Appointment Time</label>
                             </div>
 
                             <div class="col-4">
