--- a/gold-admin-frontend/src/app/views/pages/admin/loan-management/packets/assign-packets/assign-packets.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/loan-management/packets/assign-packets/assign-packets.component.html
@@ -37,7 +37,20 @@
                                 Required field
                             </mat-error>
                         </div>
+                    </div>
 
+                    <div class="row justify-content-center kt-margin-t-10">
+                        <div class="col-4 form-label">
+                            <label class="kt-padding-l-10 mandatory">Barcode</label>
+                        </div>
+                        <div class="col-8">
+                            <input type="text" class="form-control" formControlName="barcodeNumber"
+                                [class.isError]="packetForm.controls.barcodeNumber.invalid &&  packetForm.controls.barcodeNumber.touched">
+                            <mat-error
+                                *ngIf="controls.barcodeNumber.touched && controls.barcodeNumber.errors?.required">
+                                Required field
+                            </mat-error>
+                        </div>
                     </div>
 
                     <ng-container *ngIf="data.action == 'edit'">
