--- a/gold-admin-frontend/src/app/views/pages/admin/loan-management/packets/packets-list/packets-list.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/loan-management/packets/packets-list/packets-list.component.html
@@ -24,6 +24,11 @@
                     <mat-cell *matCellDef="let role">{{role.packetUniqueId | uppercase}}</mat-cell>
                 </ng-container>
 
+                <ng-container matColumnDef="barcode">
+                    <mat-header-cell *matHeaderCellDef>Barcode</mat-header-cell>
+                    <mat-cell *matCellDef="let role">{{role.barcodeNumber | uppercase}}</mat-cell>
+                </ng-container>
+
                 <ng-container matColumnDef="internalBranch">
                     <mat-header-cell *matHeaderCellDef>Branch</mat-header-cell>
                     <mat-cell *matCellDef="let role">
