--- a/gold-admin-frontend/src/app/views/pages/admin/loan-management/packets/assign-packets/assign-packets.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/loan-management/packets/assign-packets/assign-packets.component.html
@@ -4,14 +4,14 @@
     <div class="kt-portlet__body position-relative" id="container">
         <div class="text-right">
             <a href="../../../../../assets/media/files/packetList.csv" download="packetList.csv"
-                *ngIf="tabGroup.selectedIndex == 1">
+                *ngIf="tabGroup.selectedIndex">
                 <span class="text-primary csv_pos">
                     <img src="../../../../../assets/media/icons/download.svg" alt="download" height="20"> Download
-                    Sample CSV</span>
+                    Sample CSV </span>
             </a>
         </div>
         <mat-tab-group #tabGroup>
-            <mat-tab label="By Filling From">
+            <mat-tab label="By Filling Form">
                 <form [formGroup]="packetForm">
                     <div class="row ">
                         <div class="col-12">
@@ -93,7 +93,7 @@
                     </div>
                 </form>
             </mat-tab>
-            <mat-tab label="By Uploading CSV">
+            <mat-tab label="By Uploading CSV" [disabled]="data.action == 'edit'">
                 <form [formGroup]="csvForm">
                     <div class="row kt-margin-t-20">
                         <div class="col-3  form-label">
@@ -101,7 +101,7 @@
                         </div>
                         <div class="col-9">
                             <select name="" id="" class="form-control" formControlName="internalUserBranch"
-                                [class.isError]="controls.internalUserBranch.touched && controls.internalUserBranch.invalid">
+                                [class.isError]="csvForm.controls.internalUserBranch.touched && csvForm.controls.internalUserBranch.invalid">
                                 <option value="" [disabled]="true" [selected]="true"> Select Branch
                                 </option>
                                 <option *ngFor="let branch of branches" [value]="branch.id">
@@ -109,38 +109,11 @@
                                 </option>
                             </select>
                             <mat-error
-                                *ngIf="controls.internalUserBranch.touched && controls.internalUserBranch.errors?.required">
+                                *ngIf="csvForm.controls.internalUserBranch.touched && csvForm.controls.internalUserBranch.errors?.required">
                                 Required field
                             </mat-error>
                         </div>
                     </div>
-
-
-
-                    <!-- <ng-container *ngIf="data.action == 'edit'">
-
-                        <div *ngIf="data.packetData && data.packetData.appraiserId"
-                            class="row justify-content-center kt-margin-t-10">
-                            <div class="col-4 form-label">
-                                <label class="kt-padding-l-10 mandatory">Appraiser</label>
-                            </div>
-                            <div class="col-8">
-                                <select class="form-control" formControlName="appraiserId"
-                                    [class.isError]="controls.appraiserId.touched && controls.appraiserId.invalid">
-                                    <option value="" [disabled]="true" [selected]="true"> Select Appraiser
-                                    </option>
-                                    <option *ngFor="let appraiser of appraisers" [value]="appraiser.id">
-                                        {{appraiser.firstName | titlecase}}&nbsp;{{appraiser.lastName | titlecase}}
-                                    </option>
-                                </select>
-                                <mat-error
-                                    *ngIf="controls.appraiserId.touched && controls.appraiserId.errors?.required">
-                                    Required field
-                                </mat-error>
-
-                        </div>
-                    </div>
-                    </ng-container> -->
 
                     <div class="row kt-margin-t-20">
                         <div class="col-3 form-label">
