--- a/gold-admin-frontend/src/app/views/pages/admin/scrap-management/scrap-application-form/scrap-application-form.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/scrap-management/scrap-application-form/scrap-application-form.component.html
@@ -40,37 +40,37 @@
                         </kt-bank-details>
                     </mat-tab>
                     <mat-tab label="Scrap Status Approval" [disabled]="disabled[5]" *ngIf="scrapStage?.id == 6 || scrapStage?.id == 8 || scrapStage?.id ==1 || scrapStage?.id == 3 || 
-                        (url == 'view-loan' && scrapStage?.id ==6) || (url == 'view-loan' && scrapStage?.id == 8) || 
-                        (url == 'view-loan' && scrapStage?.id == 1) || (url == 'view-loan' && scrapStage?.id == 3)">
+                        (url == 'view-scrap' && scrapStage?.id == 6) || (url == 'view-scrap' && scrapStage?.id == 8) || 
+                        (url == 'view-scrap' && scrapStage?.id == 1) || (url == 'view-scrap' && scrapStage?.id == 3)">
                         <kt-approval [action]="action" [disable]="approvalFrom" [scrapDetails]="customerDetail"
                             [scrapIds]="scrapIds" [scrapStage]="scrapStage" (ornamentType)="ornaments($event)">
                         </kt-approval>
                     </mat-tab>
                     <mat-tab label="Packets"
-                        *ngIf="scrapStage?.id !=6 && scrapStage?.id !=1 && scrapStage?.id && scrapStage?.id != 9">
+                        *ngIf="scrapStage?.id != 6 && scrapStage?.id != 1 && scrapStage?.id && scrapStage?.id != 9">
                         <div class="mat-tab-body-content ng-trigger ng-trigger-translateTab"
                             style="padding:0px !important">
-                            <kt-upload-packets [viewpacketsDetails]="customerDetail" [ornamentType]="ornamentDetails"
-                                [scrapIds]="scrapIds" (next)="next($event)" [scrapStage]="scrapStage"
-                                [showButton]="showButton">
+                            <kt-upload-packets [viewScrapPacketsDetails]="customerDetail" [scrapIds]="scrapIds"
+                                (next)="next($event)" [scrapStage]="scrapStage" [showButton]="showButton">
                             </kt-upload-packets>
                         </div>
                     </mat-tab>
                     <mat-tab label="Scrap Status Approval"
-                        *ngIf="scrapStage?.id == 2 || (url == 'view-loan' && scrapStage?.id == 2)"
+                        *ngIf="scrapStage?.id == 2 || (url == 'view-scrap' && scrapStage?.id == 2)"
                         [disabled]="disabled[6]">
-                        <kt-approval [action]="action" [disable]="approvalFrom" [details]="customerDetail"
+                        <kt-approval [action]="action" [disable]="approvalFrom" [scrapDetails]="customerDetail"
                             [scrapIds]="scrapIds" [scrapStage]="scrapStage">
                         </kt-approval>
                     </mat-tab>
                     <mat-tab label="Upload Documents"
-                        *ngIf="scrapStage?.id == 8 || scrapStage?.id == 7 || scrapStage?.id == 4 || url == 'view-loan'">
+                        *ngIf="scrapStage?.id == 8 || scrapStage?.id == 7 || scrapStage?.id == 4 || url == 'view-scrap'">
                         <kt-upload-documents [scrapIds]="scrapIds" (next)="next($event)"
                             [loanDocumnets]="customerDetail" [showButton]="showButton"></kt-upload-documents>
                     </mat-tab>
                     <mat-tab label="Scrap Status Approval"
-                        *ngIf="scrapStage?.id == 7 || scrapStage?.id == 4 || (url == 'view-loan' && scrapStage?.id == 7) || (url == 'view-loan' && scrapStage?.id == 4) || (url == 'view-loan' && scrapStage?.id == 5)">
-                        <kt-approval [action]="action" [disable]="approvalFrom" [details]="customerDetail"
+                        *ngIf="scrapStage?.id == 7 || scrapStage?.id == 4 || (url == 'view-scrap' && scrapStage?.id == 7) 
+                        || (url == 'view-scrap' && scrapStage?.id == 4) || (url == 'view-scrap' && scrapStage?.id == 5)">
+                        <kt-approval [action]="action" [disable]="approvalFrom" [scrapDetails]="customerDetail"
                             [scrapIds]="scrapIds" [scrapStage]="scrapStage" (disbursal)="disbursal($event)">
                         </kt-approval>
                     </mat-tab>
